feat: implement peek